--- a/destination_details.html
+++ b/destination_details.html
@@ -132,8 +132,7 @@
 
     <div class="destination_banner_wrap overlay">
         <div class="destination_text text-center">
-            <h3>Saintmartine Iceland</h3>
-            <p>Pixel perfect design with awesome contents</p>
+            <h3 id='txtLocation'></h3>
         </div>
     </div>
     <div class="destination_details_info">
@@ -142,14 +141,7 @@
                 <div class="col-lg-8 col-md-9">
                     <div class="destination_info">
                         <h3>Description</h3>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
-                            suffered alteration in some form, by injected humour, or randomised words which don't look
-                            even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be
-                            sure there isn't anything embarrassing.</p>
-                        <p>Variations of passages of lorem Ipsum available, but the majority have suffered alteration in
-                            some form, by injected humour, or randomised words which don't look even slightly
-                            believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there
-                            isn't anything embarrassing.</p>
+                        <div class='text-center' id='txtDesc'></div>
                         <!-- <div class="single_destination">
                             <h4>Day-01</h4>
                             <p>There are many variations of passages of Lorem Ipsum available, but the majority have
@@ -567,7 +559,8 @@
 
         .detaiedIMAGE {
             padding: 15px;
-            margin: 15px height: 100px;
+            margin: 15px;
+            height: 100px;
             width: 45%;
         }
     </style>
