--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                                 <div class="social_wrap d-flex align-items-center justify-content-end">
                                     <div class="social_links d-none d-xl-block">
                                         <ul>
-                                            <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>
+                                            <li><a href="https://www.instagram.com/touristguide2021/" target="_blank"> <i class="fa fa-instagram"></i> </a></li>
                                         </ul>
                                     </div>
                                 </div>
