--- a/elements.html
+++ b/elements.html
@@ -913,7 +913,7 @@
                                 src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
                             <script>document.write(new Date().getFullYear());</script> All rights reserved | This
                             template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a
-                                href="https://colorlib.com" target="_blank">Colorlib</a>
+                                href="touristguide.netlify.com" target="_blank">Tourist Guide</a>
 
                         </p>
                     </div>
