--- a/travel_destination.html
+++ b/travel_destination.html
@@ -413,7 +413,7 @@
         </div>
     </div>
 
-    <div class="newletter_area overlay">
+    <!-- <div class="newletter_area overlay">
         <div class="container">
             <div class="row justify-content-center align-items-center">
                 <div class="col-lg-10">
@@ -445,7 +445,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div class="recent_trip_area">
         <div class="container">
