--- a/index.html
+++ b/index.html
@@ -49,6 +49,25 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@10/dist/sweetalert2.min.css">
 
     <style>
+        .iFramecontainer {
+            position: relative;
+            overflow: hidden;
+            width: 100%;
+            padding-top: 56.25%;
+            /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
+        }
+
+        /* Then style the iframe to fit in the container div with full height and width */
+        .responsive-iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            bottom: 0;
+            right: 0;
+            width: 100%;
+            height: 100%;
+        }
+
         .invisible {
             display: none !important;
             visibility: hidden !important;
@@ -136,7 +155,8 @@
                                 <div class="social_wrap d-flex align-items-center justify-content-end">
                                     <div class="social_links d-none d-xl-block">
                                         <ul>
-                                            <li><a href="https://www.instagram.com/touristguide2021/" target="_blank"> <i class="fa fa-instagram"></i> </a></li>
+                                            <li><a href="https://www.instagram.com/touristguide2021/" target="_blank">
+                                                    <i class="fa fa-instagram"></i> </a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -286,9 +306,14 @@
                                 <div class="row">
                                     <div class="col-lg-10"> <input type="text" placeholder="Where to go?"
                                             id='searchLocation'> &nbsp;</div>
-                                    <div class="col-lg-2"> <button class="btn btn-primary" type="button">Search</button>
+                                    <div class="col-lg-2">
+                                        <button class="btn btn-primary" id='btnLocationSearchOnMap' type="button">
+                                            Search
+                                        </button>
                                     </div>
                                 </div>
+
+
 
                             </div>
 
@@ -305,6 +330,9 @@
 
                         </form>
                     </div>
+                </div>
+                <div class="col-lg-12">
+                    <div class='iFramecontainer invisible' id="iframeLocation"></div>
                 </div>
             </div>
         </div>
@@ -927,6 +955,7 @@
             <div class="modal-content">
                 <div class="serch_form">
                     <input type="text" id='txtTopSearch' placeholder="Search">
+                    <input type="hidden" id="txtLocationLatLong">
                     <button type="button">search</button>
                 </div>
             </div>
