--- a/GuideDetails.html
+++ b/GuideDetails.html
@@ -212,12 +212,12 @@
                                             alt></noscript>
                                 </a>
                             </div>
-                            <p>5th flora, 700/D kings road, green <br> lane New York-1782 <br>
-                                <a href="#">+10 367 826 2567</a> <br>
+                            <p>2,Sai Charan, Gujarat <br> lane India -91 <br>
+                                <a href="#">+917854632810</a> <br>
                                 <a href="#"><span class="__cf_email__"
                                         data-cfemail="53303c3d273230271330322123363d2736217d303c3e">[email&#160;protected]</span></a>
                             </p>
-                            <div class="socail_links">
+                            <!-- <div class="socail_links">
                                 <ul>
                                     <li>
                                         <a href="#">
@@ -245,7 +245,7 @@
                                         </a>
                                     </li>
                                 </ul>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="col-xl-2 col-md-6 col-lg-2">
