--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
                                             <li>
                                                 <a class href="travel_destination.html">Destination</a>
                                             </li>
+                                            <li><a href="Emergency.html">EmergencyService</a></li>
                                             <!-- #### LogIn FormatMenu START #### -->
                                             <li id="Username" class='invisible'></li>
                                             <li id="Photo" class='invisible'>
@@ -181,6 +182,7 @@
                                     <li>
                                         <a class href="travel_destination.html">Destination</a>
                                     </li>
+                                    <li><a href="Emergency.html">EmergencyService</a></li>
                                     <!-- #### LogIn FormatMenu START #### -->
                                     <li id="MobUsername" class='invisible'></li>
                                     <li id="MobPhoto" class='invisible'>
