--- a/travel_destination.html
+++ b/travel_destination.html
@@ -68,6 +68,7 @@
                                                     <li><a href="elements.html">elements</a></li>
                                                 </ul>
                                             </li>
+                                            <li><a href="Emergency.html">EmergencyService</a></li>
                                             <!-- #### LogIn FormatMenu START #### -->
                                             <li id="Username" class='invisible'></li>
                                             <li id="Photo" class='invisible'>
