--- a/destination_details.html
+++ b/destination_details.html
@@ -81,6 +81,8 @@
                                             <li><a href="about.html">About</a></li>
                                             <li><a class href="travel_destination.html">Destination</a>
                                             </li>
+                                            <li><a href="bookGuide.html">Book Guide</a></li>
+                                            <li><a href="Emergency.html">EmergencyService</a></li>
                                             <!-- #### LogIn FormatMenu START #### -->
                                             <li id="Username" class='invisible'></li>
                                             <li id="Photo" class='invisible'>
