--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
         </div>
     </div>
 
-    <div class="testimonial_area">
+    <!-- <div class="testimonial_area">
         <div class="container">
             <div class="row">
                 <div class="col-xl-12">
@@ -784,9 +784,9 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
-    <div class="recent_trip_area">
+    <!-- <div class="recent_trip_area">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-6">
@@ -849,7 +849,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <footer class="footer">
         <div class="footer_top">
             <div class="container">
@@ -905,7 +905,7 @@
                                 Company
                             </h3>
                             <ul class="links">
-                                <li><a href="#">About</a></li>
+                                <li><a href="about.html">About</a></li>
                             </ul>
                         </div>
                     </div>
