--- a/Emergency.html
+++ b/Emergency.html
@@ -220,7 +220,7 @@
                                 Company
                             </h3>
                             <ul class="links">
-                                <li><a href="#">About</a></li>
+                                <li><a href="about.html">About</a></li>
                             </ul>
                         </div>
                     </div>
