--- a/Payment.html
+++ b/Payment.html
@@ -230,7 +230,7 @@
                                 Company
                             </h3>
                             <ul class="links">
-                                <li><a href="#">About</a></li>
+                                <li><a href="about.html">About</a></li>
                             </ul>
                         </div>
                     </div>
@@ -251,7 +251,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-xl-3 col-md-6 col-lg-3">
+                    <!-- <div class="col-xl-3 col-md-6 col-lg-3">
                         <div class="footer_widget">
                             <h3 class="footer_title">
                                 Instagram
@@ -301,7 +301,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
