--- a/ViewMyBookings.html
+++ b/ViewMyBookings.html
@@ -81,13 +81,12 @@
                                             <li><a href="index.html">home</a></li>
                                             <li><a href="about.html">About</a></li>
                                             <li><a class href="travel_destination.html">Destination</a> </li>
-                                            <li><a href="Emergency.html">EmergencyService</a></li>
-                                            <!-- <li><a href="#">pages <i class="ti-angle-down"></i></a>
+                                            <li><a href="#">pages <i class="ti-angle-down"></i></a>
                                                 <ul class="submenu">
                                                     <li><a href="destination_details.html">Destinations details</a></li>
                                                     <li><a href="elements.html">elements</a></li>
                                                 </ul>
-                                            </li> -->
+                                            </li>
                                             <!-- #### LogIn FormatMenu START #### -->
                                             <li id="Username" class='invisible'></li>
                                             <li id="Photo" class='invisible'>
@@ -148,8 +147,7 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="bradcam_text text-center">
-                        <h3>Emergency Numbers</h3>
-
+                        <h3>Payment</h3>
                     </div>
                 </div>
             </div>
@@ -157,12 +155,19 @@
     </div>
 
 
+    <div class="row text-center">
+        <div class="col-sm-12 col-md-2 col-lg-2">&nbsp;</div>
+        <div class="col-sm-12 col-md-8 col-lg-8">
+            <h1 class="headerFont">
+                Your Bookings for guide
+            </h1>
+        </div>
+        <div class="col-sm-12 col-md-2 col-lg-2">&nbsp;</div>
+        <div class="col-sm-12 col-md-12 col-lg-12" id='divViewBookings'>
 
-    <div class='iFramecontainer'>
-        <iframe src="https://indianhelpline.com/" frameborder="0" class="responsive-iframe"></iframe>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-12" style='margin:15px !important; padding:15px !important;'>&nbsp;</div>
     </div>
-
-
 
 
     <footer class="footer">
@@ -220,7 +225,7 @@
                                 Company
                             </h3>
                             <ul class="links">
-                                <li><a href="about.html">About</a></li>
+                                <li><a href="#">About</a></li>
                             </ul>
                         </div>
                     </div>
@@ -399,9 +404,27 @@
             display: none !important;
             visibility: hidden !important;
         }
+
+        .img-fluid {
+            max-height: 225px !important;
+            max-width: 225px !important;
+        }
+
+        .imgBorder {
+            border: solid #15c39a 5px;
+            margin: 3px;
+            padding: 3px;
+        }
+
+        .headerFont {
+            font-family: nothing you could do, cursive !important;
+            padding: 10px;
+            margin: 10px;
+            font-weight: bolder;
+        }
     </style>
     <script src="js/indexMain.js"></script>
-    <script src='js/Destination.js'></script>
+    <script src='js/viewBooking.js'></script>
 </body>
 
 </html>
