--- a/bookGuide.html
+++ b/bookGuide.html
@@ -57,8 +57,7 @@
                                 <div class="main-menu  d-none d-lg-block">
                                     <nav>
                                         <ul id="navigation">
-                                            <li><a href="index.html">home</a></li>
-                                            <li><a class="active" href>home</a></li>
+                                            <li><a href="index.html">home</a></li>                                            
                                             <li><a href="about.html">About</a></li>
 
                                             <!-- #### LogIn FormatMenu START #### -->
@@ -93,7 +92,7 @@
 
                                     <div class="social_links d-none d-xl-block">
                                         <ul>
-                                            <li><a href="#"> <i class="fa fa-instagram"></i> </a></li>
+                                            <li><a href="https://www.instagram.com/touristguide2021/"> <i class="fa fa-instagram"></i> </a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -143,12 +142,12 @@
                                             alt></noscript>
                                 </a>
                             </div>
-                            <p>5th flora, 700/D kings road, green <br> lane New York-1782 <br>
-                                <a href="#">+10 367 826 2567</a> <br>
+                            <p>2,Sai Charan, Gujarat <br> Lane India 91 <br>
+                                <a href="#">+917854632810</a> <br>
                                 <a href="#"><span class="__cf_email__"
                                         data-cfemail="53303c3d273230271330322123363d2736217d303c3e">[email&#160;protected]</span></a>
                             </p>
-                            <div class="socail_links">
+                            <!-- <div class="socail_links">
                                 <ul>
                                     <li>
                                         <a href="#">
@@ -176,7 +175,7 @@
                                         </a>
                                     </li>
                                 </ul>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="col-xl-2 col-md-6 col-lg-2">
@@ -185,10 +184,9 @@
                                 Company
                             </h3>
                             <ul class="links">
-                                <li><a href="#">Pricing</a></li>
-                                <li><a href="#">About</a></li>
-                                <li><a href="#"> Gallery</a></li>
-                                <li><a href="#"> Contact</a></li>
+                               
+                                <li><a href="about.html">About</a></li>
+                               
                             </ul>
                         </div>
                     </div>
@@ -214,50 +212,8 @@
                             <h3 class="footer_title">
                                 Instagram
                             </h3>
-                            <div class="instagram_feed">
-                                <div class="single_insta">
-                                    <a href="#">
-                                        <img data-cfsrc="img/instagram/1.png" alt
-                                            style="display:none;visibility:hidden;"><noscript><img
-                                                src="img/instagram/1.png" alt></noscript>
-                                    </a>
-                                </div>
-                                <div class="single_insta">
-                                    <a href="#">
-                                        <img data-cfsrc="img/instagram/2.png" alt
-                                            style="display:none;visibility:hidden;"><noscript><img
-                                                src="img/instagram/2.png" alt></noscript>
-                                    </a>
-                                </div>
-                                <div class="single_insta">
-                                    <a href="#">
-                                        <img data-cfsrc="img/instagram/3.png" alt
-                                            style="display:none;visibility:hidden;"><noscript><img
-                                                src="img/instagram/3.png" alt></noscript>
-                                    </a>
-                                </div>
-                                <div class="single_insta">
-                                    <a href="#">
-                                        <img data-cfsrc="img/instagram/4.png" alt
-                                            style="display:none;visibility:hidden;"><noscript><img
-                                                src="img/instagram/4.png" alt></noscript>
-                                    </a>
-                                </div>
-                                <div class="single_insta">
-                                    <a href="#">
-                                        <img data-cfsrc="img/instagram/5.png" alt
-                                            style="display:none;visibility:hidden;"><noscript><img
-                                                src="img/instagram/5.png" alt></noscript>
-                                    </a>
-                                </div>
-                                <div class="single_insta">
-                                    <a href="#">
-                                        <img data-cfsrc="img/instagram/6.png" alt
-                                            style="display:none;visibility:hidden;"><noscript><img
-                                                src="img/instagram/6.png" alt></noscript>
-                                    </a>
-                                </div>
-                            </div>
+                            <div class="instagram_feed" id='instagram_feed2'>
+                            </div>                        
                         </div>
                     </div>
                 </div>
