--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
                                             <li>
                                                 <a class href="travel_destination.html">Destination</a>
                                             </li>
+                                            <li><a href="Emergency.html">EmergencyService</a></li>
                                             <!-- #### LogIn FormatMenu START #### -->
                                             <li id="Username" class='invisible'></li>
                                             <li id="Photo" class='invisible'>
@@ -181,6 +182,7 @@
                                     <li>
                                         <a class href="travel_destination.html">Destination</a>
                                     </li>
+                                    <li><a href="Emergency.html">EmergencyService</a></li>
                                     <!-- #### LogIn FormatMenu START #### -->
                                     <li id="MobUsername" class='invisible'></li>
                                     <li id="MobPhoto" class='invisible'>
@@ -719,7 +721,7 @@
         </div>
     </div>
 
-    <div class="testimonial_area">
+    <!-- <div class="testimonial_area">
         <div class="container">
             <div class="row">
                 <div class="col-xl-12">
@@ -782,9 +784,9 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
-    <div class="recent_trip_area">
+    <!-- <div class="recent_trip_area">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-6">
@@ -847,7 +849,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <footer class="footer">
         <div class="footer_top">
             <div class="container">
@@ -903,7 +905,7 @@
                                 Company
                             </h3>
                             <ul class="links">
-                                <li><a href="#">About</a></li>
+                                <li><a href="about.html">About</a></li>
                             </ul>
                         </div>
                     </div>
