--- a/travel_destination.html
+++ b/travel_destination.html
@@ -68,6 +68,7 @@
                                                     <li><a href="elements.html">elements</a></li>
                                                 </ul>
                                             </li>
+                                            <li><a href="Emergency.html">EmergencyService</a></li>
                                             <!-- #### LogIn FormatMenu START #### -->
                                             <li id="Username" class='invisible'></li>
                                             <li id="Photo" class='invisible'>
@@ -447,7 +448,7 @@
         </div>
     </div> -->
 
-    <div class="recent_trip_area">
+    <!-- <div class="recent_trip_area">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-6">
@@ -509,7 +510,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <footer class="footer">
         <div class="footer_top">
             <div class="container">
@@ -565,7 +566,7 @@
                                 Company
                             </h3>
                             <ul class="links">
-                                <li><a href="#">About</a></li>
+                                <li><a href="about.html">About</a></li>
                             </ul>
                         </div>
                     </div>
