--- a/index.html
+++ b/index.html
@@ -90,6 +90,48 @@
         .instagram-image img:hover {
             box-shadow: 0 1px 5px rgba(245, 242, 242, 0.2);
         }
+
+
+        .small {
+            font-size: 80%;
+            font-weight: 400;
+        }
+
+        .Wethcard {
+            background-color: #ffffff;
+            border-radius: 50px;
+            color: #6f707d;
+            font-family: 'Marcellus', serif
+        }
+
+        #heading {
+            font-size: 55px;
+            color: #2b304d
+        }
+
+        .Wethtemp {
+            place-items: center
+        }
+
+        .Wethtemp-details>p>span,
+        .Wethgrey {
+            color: #a3acc1;
+            font-size: 12px;
+            font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+        }
+
+        .Wethfa {
+            color: #a5a5b1
+        }
+
+        *:focus {
+            outline: none
+        }
+
+        .flex-grow-1 {
+            -ms-flex-positive: 1 !important;
+            flex-grow: 1 !important;
+        }
     </style>
 </head>
 
@@ -341,13 +383,25 @@
                         </form>
                     </div>
                 </div>
-                <div class="col-lg-12">
-                    <div class='iFramecontainer invisible' id="iframeLocation"></div>
+
+                <div class='col-lg-4 col-sm-12 col-md-12'>
+                    <div class='invisible' id="divWeather">
+
+                    </div>
                 </div>
+
+                <div class="col-lg-8 col-sm-12 col-md-12">
+                    <div class='iFramecontainer invisible' id="iframeLocation">
+
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
 
+    `
+    </div>
 
     <!-- <div class="popular_destination_area">
         <div class="container">
@@ -1048,6 +1102,7 @@
     </script>
     <script src="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.js"></script>
     <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/3.5.2/firebaseui.css" />
+
 
 
 </body>
